[package]
name = "git-reconstruct"
version = "1.0.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
publish = false

[dependencies]
git2 = "0.7.1"
failure = "0.1.1"
failure-tools = "4.0.2"
indicatif = "0.9.0"
structopt = "0.2.10"
crossbeam = "0.3.2"
num_cpus = "1.8.0"
walkdir = "2.1.4"
fixedbitset = "0.1.9"
serde_derive = "1.0.66"
bincode = "1.0.0"
serde = "1.0.66"
lz4 = "1.22.0"

[profile.release]
lto = false
codegen-units = 1
incremental = true
